--- a/css/styles.css
+++ b/css/styles.css
@@ -13,32 +13,10 @@ p {
   background: #D5F68C;
 }
 
-.back-color2 {
-  background: #ABCA30;
+h1 {
+  font-style:oblique;
+  text-align: center;
 }
-.back-color3 {
-  background: #FCD946;
-}
-.rounded {
-  font-size: 20;
-  border-radius: 10px;
-}
-.sidebar-font {
-  float: right;
-  font: sans-serif;
-  font-size: 20;
-  padding-right:10%;
-  line-height: 20px;
-}
-hr {
-  display:grid;
- border-color: #437674;
-  border-width:medium;
-}
-.box{
-  margin: 12px;
-  border: 2px solid green;
-  padding: 4px;
-  background-color: orange;
-
+#reults, #begginer, #intermid, #expert{
+  display: none;
 }
